--- a/js/exam1/exam3/q4/index.html
+++ b/js/exam1/exam3/q4/index.html
@@ -5,15 +5,23 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div class="container">
-		<div class = "cell">...</div>
-		<div class = "cell">...</div>
-		<div class = "cell">...</div>
-		<div class = "cell">...</div>
-		<div class = "cell">...</div>
-		<div class = "cell">...</div>
-		<div class = "cell">...</div>
-
-	</div>
+	<div>
+		<div class="container">
+			<button class = "cell"></button>
+			<button class = "cell"></button>
+			<button class = "cell"></button>
+		</div>
+		<div class="container">
+			<button class = "cell"></button>
+			<button class = "cell"></button>
+			<button class = "cell"></button>
+		</div>
+		<div class="container">
+			<button class = "cell"></button>
+			<button class = "cell"></button>
+			<button class = "cell"></button>
+		</div>
+		
+	<div>
 </body>
 </html>
