--- a/js/exam1/exam3/progress bar/index.html
+++ b/js/exam1/exam3/progress bar/index.html
@@ -1,13 +1,11 @@
 </!DOCTYPE html>
 <html>
 <link rel="stylesheet" type="text/css" href="style.css">
-<script type="text/javascript" src="script.js"></script>
 <body >
-	<div id = progress>
-		<div id = bar >
-		</div>	
+	<div class = "progress">
+		<div class="bar"></div>
 	</div>
-	<button onclick="move()">Click Me</button> 
+<script type="text/javascript" src="script.js"></script>
 
 
 </body>
